--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,11 @@ body {
   border-color: #e8a347;
 }
 
+.Blue--link {
+  color: #61dafb;
+  text-decoration: none;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
